# host-exposer

./: .gitignore  Cargo.toml  README.md  README_zh_CN.md
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: main.rs
public-lib/: Cargo.toml
public-lib/src/: lib.rs  message.rs  times.rs  tracing.rs
server/: Cargo.toml
server/frontend/: components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.mts
server/frontend/src/: App.vue
server/frontend/src/components/: ClientCard.vue  ClientList.vue  LoginForm.vue
server/frontend/src/plugins/: index.ts  vuetify.ts
server/frontend/src/services/: client.ts
server/src/: auth.rs  clients.rs  db.rs  main.rs  result.rs
server/src/entity/: client.rs  mod.rs  prelude.rs
server/src/migration/: m20240218_000001_create_client_table.rs  mod.rs
