[workspace]
members = ["server", "client", "public-lib"]
resolver = "2"

[workspace.dependencies]
public-lib = { path = "public-lib" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
warp = { version = "0.3.6", features = ["tokio-rustls"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["tokio-rustls"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
futures-util = "0.3.30"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
clap = { version = "4.5.0", features = ["derive", "unicode", "env"] }
