[workspace]
members = ["server", "client", "public-lib"]
resolver = "2"

[workspace.dependencies]
public-lib = { path = "public-lib" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["tokio-rustls"] }
futures-util = "0.3.30"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
clap = { version = "4.5.0", features = ["derive", "unicode", "env"] }
base64 = "0.21.7"
axum = "0.7.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time", "local-time"] }
time = { version = "0.3.34", features = ["serde-human-readable", "local-offset", "serde-well-known"] }
