[package]
name = "host_exposer_client"
version = "0.1.0"
edition = "2021"
authors = ["ArgonarioD <argonariod@outlook.com>"]
description = "the client for the host_exposer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive", "unicode", "env"] }
local-ip-address = "0.5.7"
#surge-ping = "0.8.0"
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
public-lib = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
futures-util = { workspace = true }
