[package]
name = "public-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
warp = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
