[package]
name = "public-lib"
version = "0.1.0"
edition = "2021"
authors = ["ArgonarioD <argonariod@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
axum = { workspace = true, features = ["ws"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["time", "local-time"] }
time = { workspace = true, features = ["serde-human-readable", "local-offset", "serde-well-known", "macros"] }