[package]
name = "host_exposer_server"
version = "0.1.0"
edition = "2021"
authors = ["ArgonarioD <argonariod@outlook.com>"]
description = "server side app for the host-exposer, repo url: https://github.com/ArgonarioD/host-exposer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive", "unicode", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
public-lib = { workspace = true }
tokio-stream = { version = "0.1.14", features = ["net"] }
futures-util = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
sea-orm = { version = "0.12.14", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "0.12.14", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
time = { workspace = true, features = ["serde-human-readable", "local-offset", "serde-well-known"] }
thiserror = "1.0.57"
rand = "0.8.5"
base64 = { workspace = true }
axum = { workspace = true, features = ["ws", "http2"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["time", "local-time"] }
